fixed padding of heading on small devices

--- a/src/scss/styles/_section-header.scss
+++ b/src/scss/styles/_section-header.scss
@@ -1,5 +1,5 @@
 $header-padding: 50px;
-$header-padding-m: 30px;
+$header-padding-m: 10px;
 
 .section-header {
     padding: $header-padding 0 $header-padding 0;
